# cpp

./: .gitignore  README.md  base_delete.cpp
CRC_calc_edu/: cc.bat  clean.bat  crc_calc.cpp  crc_calc.h  gen.h  main.cpp  makefile  makefile.win
CxxTestSamples-master/: BadTestSuite1.h  Example1-MyTestSuite1.bat  Example10-BadTestSuite1-FOG.bat  Example11-MyTestSuite1+2+4.bat  Example12-MyTestSuite5.bat  Example13-MyTestSuite6-FOG.bat  Example14-MyTestSuite8.bat  Example15-MyTestSuite7.bat  Example16-MyTestSuite9.bat  Example17-MyTestSuite10-FOG.bat  Example18-MyTestSuite11.bat  Example19-MockTestSuite-REAL.bat  Example19-MockTestSuite.bat  Example2-MyTestSuite2-XML.bat  Example2-MyTestSuite2.bat  Example20-MockGhost-REAL.bat  Example20-MockGhost.bat  Example21-MockGeneric-REAL.bat  Example21-MockGeneric.bat  Example3-MyTestSuite1-Template.bat  Example4-MyTestSuite1-FOG.bat  Example5-MyTestSuite3.bat  Example6-MyTestSuite3-FOG.bat  Example7-MyTestSuite4.bat  Example8-MyTestSuite4-FOG.bat  Example9-BadTestSuite1.bat  MockGeneric.h  MockGhost.h  MockTestSuite.h  MyClass.h  MyTestSuite1.h  MyTestSuite1.tpl  MyTestSuite10.h  MyTestSuite11.h  MyTestSuite2.h  MyTestSuite3.h  MyTestSuite4.h  MyTestSuite5.h  MyTestSuite6.h  MyTestSuite7.h  (+22 more)
Enigma_01/: Enigma_01.sln  Enigma_01.vcxproj  Enigma_01.vcxproj.filters  gen.h  main.cpp
Fonts_FOR_LCD/: Fonts.sln  gen.h  mainc.cpp  utils.cpp  utils.h
INI_File_interface_vs/: INIFilesIF.sln  INIFilesIF.vcxproj  Logger.ini  c_ini.cpp  c_ini.h  cfgfile.cpp  cfgfile.h  default.ini  mainc.cpp  makefile.win  utils.cpp  utils.h
Logger_02_edu_vs/: Logger.sln  README.txt
Logger_05_edu_vs/: Logger_05_edu_vs.sln  Logger_05_edu_vs.vcxproj  Logger_05_edu_vs.vcxproj.filters  logger.cpp  logger.h  main.cpp  my_exceptions.cpp  my_exceptions.h  utils.cpp  utils.h
MKD/: M.BAT  _ReadMe.txt  catch_main.cpp  catch_test_build.bat  catch_test_mingw.bat  cc.bat  gen.h  info.cpp  info.h  main.cpp  makefile  makefile.win  runtest.bat  t.bat  u.bat  utils.h  (+1 more)
Prostotron_vs/: CMakeLists.txt  Description_Prostotron.cpp  _ReadMe.txt  asm_add1.asm  asm_sum10.asm  asm_sumX.asm  edu_Prostotron_vs.sln  edu_Prostotron_vs.vcxproj  edu_Prostotron_vs.vcxproj.filters  gen.h  list1.txt  list2.txt  list3.txt  list_add1.txt  main.cpp  makefile.nix  makefile.win  mem_cell.cpp  mem_cell.h  memory.cpp  memory.h  processor.cpp  processor.h  trash.cpp  utils.cpp  utils.h
_start_edu_1/: CMakeLists.txt  cTimer.cpp  cTimer.h  cc.bat  gen.h  main.cpp  mainc.cpp  phone_book.cpp
_start_fast/: CMakeLists.txt  main.cpp  makefile
_start_hello_edu/: CMakeLists.txt  main.cpp
_template_super_vs/: CMakeLists.txt  RandomNumbers.cpp  RandomNumbers.h  _super_template.sln  _super_template.vcxproj  _super_template.vcxproj.filters  cTimer.cpp  cTimer.h  gen.h  main.cpp  mainc.cpp  printIntro.cpp  utils.cpp  utils.h
callback_functions_vs/: CMakeLists.txt  _ReadMe.txt  gen.h  main.cpp  utils.h
callback_functions_vs/build_wsl/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  rules.ninja
cards_play_vs/: CMakeLists.txt  ElectricOven.h  cards_play.sln  cards_play.vcxproj  cards_play.vcxproj.filters  cc.bat  deck.cpp  deck.h  gen.h  mainc.cpp  makefile.win  utils.cpp
cmake_edu_02/: CMakeLists.txt  ChuckNorris.cpp  ChuckNorris.h  _ReadMe.txt  error_message.cpp  error_message.h  main.cpp  makefile.win  utils.cpp  utils.h
cmake_edu_02/include/: gen.h
functors_edu_vs/: CMakeLists.txt  _ReadMe.txt  functors_edu.sln  functors_edu.vcxproj  gen.h  mainc.cpp  utils.cpp  utils.h
google_test_01/: CMakeLists.txt  CMakeLists_download_gtest.txt  ReadMe.txt  counter.cpp  counter.h  main.cpp  makefile  person.cpp  person.h
google_test_02/: CMakeLists.txt  ReadMe.txt  example.cpp  example.h  gen.h  main.cpp
google_test_02/test/: CMakeLists.txt  exampleTests.cpp
google_test_13_bank_vs/: CMakeLists.txt  _ReadMe.txt  google_test_13_bank_vs.sln  google_test_13_bank_vs.vcxproj  main.cpp
google_test_14_mock/: CMakeLists.txt  CMakeLists_bkp.txt  MockPriceCalculator.h  PriceCalculator.cpp  PriceCalculator.h  ShoppingCart.cpp  ShoppingCart.h  main.cpp
interface_vs/: CMakeLists.txt  gen.h  interface_vs.sln  interface_vs.vcxproj  interface_vs.vcxproj.filters  main.cpp  mainc.cpp  utils.cpp  utils.h
map_edu_vs/: CMakeLists.txt  edu_map.sln  edu_map.vcxproj  edu_map.vcxproj.filters  fprint.h  gen.h  main.cpp  makefile.win  person.h  phone_book_map.cpp  phone_book_map.h  text.txt
map_std_02_vs/: CMakeLists.txt  RandomNumbers.h  _ReadMe.txt  gen.h  main.cpp  map_std_02_vs.sln  map_std_02_vs.vcxproj  oven.cpp  run.bat
monte_carlo_vs/: CMakeLists.txt  gen.h  main.cpp  monte_carlo_vs.sln  monte_carlo_vs.vcxproj
password_edu/: CMakeLists.txt  divide_by_zero.cpp  factorial.cpp  factorial.h  gen.h  main.cpp  mainc.cpp  makefile.win  pass.cpp  pass.h
pattern_adapter_cats_vs/: CMakeLists.txt  cat_if.cpp  cat_if.h  cat_info_printer.cpp  cat_info_printer.h  cats.cpp  cats.h  cc.bat  home_cat_adapter.cpp  home_cat_adapter.h  main.cpp  makefile.win  pattern_adapter.sln  pattern_adapter.vcxproj  pattern_adapter.vcxproj.filters  tiger.h
pattern_listener01/: CMakeLists.txt  ReadMe.txt  main.cpp
pattern_strategy_animals_vs/: CMakeLists.txt  FlyBehaviorIf.h  ReadMe.txt  animals.cpp  animals.h  gen.h  main.cpp  pattern_strategy_animals_vs.sln  pattern_strategy_animals_vs.vcxproj  pattern_strategy_animals_vs.vcxproj.filters
reference_vs_pointer_edu/: CMakeLists.txt  cc.bat  main.cpp  utils.cpp
thread_06_edu/: CMakeLists.txt  _ReadMe.txt  gen.h  main.cpp
thread_13_edu/: CMakeLists.txt  _ReadMe.txt  cc.bat  gen.h  main.cpp  makefile
yagni_edu_vs/: CMakeLists.txt  bread.cpp  bread.h  cc.bat  cube_calc.cpp  cube_calc.h  edu_yagni.sln  edu_yagni.vcxproj  edu_yagni.vcxproj.filters  error_message.cpp  error_message.h  factorial.cpp  factorial.h  hello.cpp  hello.h  main.cpp  makefile.win  oven.cpp  oven.h  yagni_edu_vs.code-workspace
zero_error_edu/: CMakeLists.txt  cc.bat  divide_by_zero.cpp  divide_by_zero.h  main.cpp  mainc.cpp  makefile.win  makefile_2.win  phone_book.cpp  phone_book.h
(+1602 files in other folders)
